provisioning/infrastructure/110_realms/overlays/k3d-example/traefik-forward-auth/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-forward-auth-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd
    # ingress.kubernetes.io/auth-type: forward
    # ingress.kubernetes.io/auth-url: http://traefik-forward-auth-svc.keycloak-operator.svc.cluster.local/
    # ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  ingressClassName: traefik
  rules:
  - host: auth.k3d-example.lessingstrasse.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-forward-auth-svc
            port:
              number: 80
  tls:
  - hosts:
    - auth.k3d-example.lessingstrasse.org
    secretName: auth.k3d-example.lessingstrasse.org
